# diy-smart-radiator

./: CMakeLists.txt
esphome/components/radiator_ctrl/: __init__.py  gc9a01.cpp  gc9a01.h  gc9a01_driver.cpp  gc9a01_driver.h  pid.cpp  pid.h  radiator_ctrl.cpp  radiator_ctrl.h  stepper_control.cpp  stepper_control.h  tmc2209_uart.cpp
esphome/components/radiator_ctrl/control/: pid.cpp
esphome/components/radiator_ctrl/display/: gc9a01.cpp
esphome/components/radiator_ctrl/motor/: stepper_control.cpp
esphome/components/radiator_ctrl/tmc2209/: tmc2209_uart.h
examples/: radiator.yaml
